<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmarDatosActivity">

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_ConfirmarDatosActivity"
        android:textSize="@dimen/title_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/textNombre"
        android:layout_width="@dimen/width_editText"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo" />

    <TextView
        android:id="@+id/textFechaNacimiento"
        android:layout_width="@dimen/width_editText"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNombre" />

    <TextView
        android:id="@+id/textPhone"
        android:layout_width="@dimen/width_editText"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_telefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFechaNacimiento" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="@dimen/width_editText"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPhone" />

    <TextView
        android:id="@+id/textDescripcion"
        android:layout_width="@dimen/width_editText"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail" />

    <Button
        android:id="@+id/buttonEditarDatos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_editarDatos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>